refactor: minor getFirst() refactor